@startuml
skinparam classAttributeIconSize 0


class PerformOrderUI {

}

class PerformOrderController {
+newOrder(idOrder,finalPrice)
+newProductOrder(idOrder,reference,amount)
+calculateCredits(preco,credits)
+addProductOrder()
+addOrder()
}

class OrderDB {
+addOrder(order)
}

class ProductOrderDB {
+addProductOrder(pdOrder)
}

class Product {
  -String name
  -String reference
  -String description
  -Double price
  -Integer amount

}

class Order {
  - int idOrder
  - double finalPrice
  + save()
}

class ProductOrder {
  -int reference
  -int idOrder
  -int amount
  +save()
  + newProductOrder(idOrder,reference,amount)
}

class Client {
  -String name
  -String email
  -String creditCardNumber
  -Date validityDate
  -Integer ccv
  +calculateCredits(preco,credits)

}

class Adress {
  -String street
  -String postalCode
  -Integer number
  -String locality
  -String GPSCoordinates

}

class ClientDB {

}

class User {
  -String name
  -String mail
  -String password
}

PerformOrderUI ..> PerformOrderController
PerformOrderController ..> ProductOrderDB
PerformOrderController ..> OrderDB
PerformOrderController ..> ClientDB
ClientDB ..> Client
OrderDB  ..>  Order
ProductOrderDB ..> ProductOrder

Client "1" --> "*" Order : add>

Client "*" --> "1" Adress: has >

Client "1" --> "1" User : acts has >

Order "1" -- "*" ProductOrder : has >

ProductOrder "*" -- "1" Product : has >



@enduml
